<resources>
    <string name="app_name">Мобильная АЗС</string>
    <string name="apiKey">5417e415-05e4-4da1-8531-37e40ac14da9</string>
    <string name="password">Пароль</string>
    <string name="number">Телефон</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="next">Дальше</string>
    <string name="enter_number">Введите номер телефона</string>
    <string name="login">Уже есть аккаунт? Войти</string>
    <string-array name="type_account">
        <item>
            Выберите тип аккаунта
        </item>
        <item>
            Физическое лицо
        </item>
        <item>
            Компания
        </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint">Введите E-mail</string>
    <string name="enter_form">Заполните форму регистрации</string>
    <string name="phone_hint">Введите телефон (без +7\\8)</string>
    <string name="name_hint">Введите своё Имя</string>
    <string name="password_hint">Придумайте пароль</string>
    <string name="d_password_hint">Повторите пароль</string>
    <string name="example_email">example123@mail.ru</string>
    <string name="example_phone">+7 (xxx) xxx-xx-xx</string>
    <string name="map">Карта</string>
    <string name="car">Автомобили</string>
    <string name="orders">Заказы</string>
    <string name="profile">Профиль</string>
    <string name="mark_is">Марка</string>
    <string name="model_is">Модель</string>
    <string name="num_is">Гос. номер</string>
    <string name="color_is">Цвет</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="add_car">add_car</string>
    <string name="email">E-mail</string>
    <string name="car_no_exists">К сожалению, у Вас пока нет личных автомобилей</string>
    <string name="orders_no_exists">К сожалению, Вы еще ничего не заказывали.</string>
    <string name="adding">Добавить</string>
    <string name="new_car">Добавление автомобиля</string>
    <string name="required">Обязтельное*</string>
    <string name="loading">Загрузка</string>
</resources>