<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/order_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginStart="12.5dp"
    android:layout_marginEnd="12.5dp">
    <ImageView
        android:id="@+id/car_image"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
        android:src="@drawable/auto"/>
    <TextView
        android:id="@+id/car_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_image"
        android:text="@string/mark_is"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/car_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_mark"
        android:text="@string/model_is"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/car_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_model"
        android:text="@string/num_is"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/car_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_num"
        android:text="@string/color_is"
        android:textSize="16sp"
        android:textColor="@color/black"/>
</RelativeLayout>