<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:id="@+id/main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/df_danger"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="40dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/icon"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:elevation="3dp"/>

        <TextView
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/font2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/formBg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:scrollbars="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:id="@+id/sendOtpLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:background="@color/transparent"
                    android:layout_marginHorizontal="45dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/email"
                        android:fontFamily="@font/font1"
                        android:inputType="textEmailAddress"
                        android:background="@color/white"
                        android:paddingHorizontal="10dp"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    app:errorEnabled="true"
                    android:background="@color/transparent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/password"
                        android:background="@color/white"
                        android:paddingHorizontal="10dp"
                        android:fontFamily="@font/font1"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sendLogIn"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="45dp"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/round_button"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/font2"
                    android:text="@string/enter"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="logIn"/>

                <ProgressBar
                    android:id="@+id/progressSendingOtp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/df_blue"
                    android:text="@string/register"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="registerNow"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>