<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddCarActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/formBg">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:background="@color/formBg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/formBg">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/auto"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                app:layout_collapseMode="pin">
                <ImageButton
                    android:id="@+id/back_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_back"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="2dp"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/formBg">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/root_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:padding="15dp"
                android:paddingBottom="25dp">
                <TextView
                    android:id="@+id/text_adding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_car"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:layout_marginTop="40dp"
                    android:paddingHorizontal="25dp"
                    android:layout_centerHorizontal="true"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/markLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/text_adding"
                    android:hint="@string/mark_is"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/red"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/markText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingHorizontal="20dp"
                        android:background="@color/white"
                        android:textSize="20sp"
                        android:elevation="4dp"
                        android:inputType="text"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/modelLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_below="@id/markLayout"
                    android:hint="@string/model_is"
                    android:layout_marginTop="10dp"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/red"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/modelText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingHorizontal="20dp"
                        android:background="@color/white"
                        android:textSize="20sp"
                        android:elevation="4dp"
                        android:inputType="text"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/numberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_below="@id/modelLayout"
                    android:layout_marginTop="10dp"
                    android:hint="@string/num_is"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/red"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingHorizontal="20dp"
                        android:background="@color/white"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:elevation="4dp"
                        android:inputType="text"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/colorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_below="@id/numberLayout"
                    android:hint="@string/color_is"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/red"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/colorText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingHorizontal="20dp"
                        android:background="@color/white"
                        android:textSize="20sp"
                        android:elevation="4dp"
                        android:inputType="text"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/createCar"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="70dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/add_button"
                    android:layout_below="@id/colorLayout"
                    android:text="@string/adding"
                    android:textColor="@color/red"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="4dp" />
            </RelativeLayout>
        </ScrollView>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>